feat : ErrorHandler를 통해 에러를 관리